--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
       "esnext"
     ],
     "allowJs": true,
+    "types": [
+      "react-bootstrap"
+    ],
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
