--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/coreui": "^5.0.0-alpha.2",
+    "@coreui/react": "^5.0.0-alpha.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -17,13 +19,16 @@
     "@types/react": "^18.2.27",
     "@types/react-bootstrap": "^0.32.33",
     "@types/react-dom": "^18.2.12",
+    "@types/recharts": "^1.8.25",
     "bootstrap": "^5.3.2",
+    "primereact": "^10.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -31,7 +36,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "postcss src/index.css -o public/index.css"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +56,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "postcss": "^8.4.31",
+    "recharts": "^2.9.0",
+    "sass": "^1.69.3"
   }
 }
