--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     ],
     "allowJs": true,
     "types": [
-      "react-bootstrap"
+      "react-bootstrap",
+      "@mui/material/styles"
     ],
     "skipLibCheck": true,
     "esModuleInterop": true,
